<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/partNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:minHeight="50dp"
                android:text="@string/part_number" />

            <TextView
                android:id="@+id/partDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="50dp"
                android:text="@string/part_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/increaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="increaseQty"
                android:text="@string/plusButton" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/decreaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="decreaseQty"
                android:text="@string/minusButton" />
        </LinearLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:onClick="addPartToStock"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/addButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>